<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.rails.purchaseplatform.common.widget.EditLayout
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/address_add_men"
                app:hint="@string/address_add_men_hint"
                app:is_hide="true" />

            <View
                style="@style/line_thin_gray"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border" />

            <com.rails.purchaseplatform.common.widget.EditLayout
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_10"
                android:inputType="phone"
                android:maxLength="11"
                android:text="@string/address_add_phone"
                app:hint="@string/address_add_phone_hint"
                app:is_hide="true" />

            <View
                style="@style/line_thin_gray"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rails.purchaseplatform.common.widget.LableLayout
                    android:id="@+id/et_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_toLeftOf="@+id/btn_location"
                    android:text="@string/address_add_area"
                    app:hint="@string/address_add_area_hint"
                    app:is_hide="true" />

                <TextView
                    android:id="@+id/btn_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/common_border"
                    android:drawableLeft="@drawable/ic_address_location"
                    android:drawablePadding="@dimen/dp_5"
                    android:text="@string/address_add_location"
                    android:textColor="@color/font_black_light"
                    android:textSize="@dimen/font_size_13" />

            </RelativeLayout>


            <View
                style="@style/line_thin_gray"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginRight="@dimen/common_border" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">

                <TextView
                    android:id="@+id/tv_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:drawablePadding="@dimen/dp_3"
                    android:gravity="left"
                    android:minWidth="@dimen/dp_80"
                    android:text="@string/address_add_address"
                    android:textColor="@color/font_black"
                    android:textSize="@dimen/font_size_14" />

                <com.rails.purchaseplatform.common.widget.ContainsEmojiEditText
                    android:id="@+id/et_remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_marginRight="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_toRightOf="@+id/tv_key"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/address_add_address_hint"
                    android:lines="5"
                    android:minWidth="@dimen/dp_40"
                    android:textColor="@color/font_black"
                    android:textColorHint="@color/font_hint"
                    android:textSize="@dimen/font_size_14" />

            </RelativeLayout>

            <View style="@style/line_bold_gray" />

            <TextView
                android:layout_width="match_parent"
                android:textSize="@dimen/font_size_15"
                android:textColor="@color/font_black"
                android:layout_marginLeft="@dimen/common_border"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/address_add_type"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginRight="@dimen/common_border"
                android:layout_marginLeft="@dimen/common_border">

                <TextView
                    android:id="@+id/btn_recivice"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_20"
                    android:background="@drawable/selector_corner_blue_white_20"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_5"
                    android:singleLine="true"
                    android:paddingBottom="@dimen/dp_5"
                    android:text="@string/address_add_recevice"
                    android:textColor="@color/selector_white_gray_color"
                    android:textSize="@dimen/font_size_15" />


                <TextView
                    android:id="@+id/btn_bill"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_corner_blue_white_20"
                    android:gravity="center"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:singleLine="true"
                    android:text="@string/address_add_bill"
                    android:textColor="@color/selector_white_gray_color"
                    android:textSize="@dimen/font_size_15" />

            </LinearLayout>


<!--            <RelativeLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginLeft="@dimen/common_border"-->
<!--                android:visibility="gone"-->
<!--                android:layout_marginTop="@dimen/dp_25"-->
<!--                android:layout_marginRight="@dimen/common_border">-->


<!--                <TextView-->
<!--                    android:id="@+id/tv_defult"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/address_add_defult"-->
<!--                    android:textColor="@color/font_black"-->
<!--                    android:textSize="@dimen/font_size_15" />-->

<!--                <TextView-->
<!--                    android:id="@+id/tv_defult_tip"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_below="@+id/tv_defult"-->
<!--                    android:layout_marginTop="@dimen/dp_5"-->
<!--                    android:text="@string/address_add_defult_tip"-->
<!--                    android:textColor="@color/font_gray"-->
<!--                    android:textSize="@dimen/font_size_12" />-->

<!--                <Switch-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:switchMinWidth="@dimen/dp_50"-->
<!--                    app:theme="@style/Switch" />-->

<!--            </RelativeLayout>-->


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/btn_add"
        style="@style/btn_commit.blue"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/address_add_save"
        android:textSize="@dimen/font_size_15" />

</RelativeLayout>