<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/popup_search_type"
    android:orientation="vertical"
    android:overScrollMode="never"
    android:paddingTop="@dimen/dp_20"
    android:paddingBottom="@dimen/paddingL"
    android:scrollbars="none">

    <!--    <ScrollView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center_horizontal"-->
    <!--        android:layout_marginTop="@dimen/margin"-->
    <!--        android:layout_marginBottom="@dimen/paddingL">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/tv_receiver"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_20"
            android:button="@null"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/padding"
            android:text="@string/receiver"
            android:textColor="@color/selector_text_blue_black"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_tiny"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@color/bg_gray" />

        <CheckBox
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_20"
            android:button="@null"
            android:paddingTop="@dimen/padding"
            android:paddingBottom="@dimen/padding"
            android:gravity="center_vertical"
            android:text="@string/mobile"
            android:textColor="@color/selector_text_blue_black"
            android:textSize="@dimen/font_size_12" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_tiny"
            android:layout_marginStart="@dimen/dp_12"
            android:layout_marginEnd="@dimen/dp_12"
            android:background="@color/bg_gray" />

        <CheckBox
            android:id="@+id/tv_full_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginStart="@dimen/dp_20"
            android:gravity="center_vertical"
            android:button="@null"
            android:text="@string/fullAddress"
            android:textColor="@color/selector_text_blue_black"
            android:textSize="@dimen/font_size_12" />

    </LinearLayout>
    <!--    </ScrollView>-->


</ScrollView>